--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,8 @@ nose
 coverage
 pypi-publisher
 
+# Test
 factory-boy==2.8.1
 pytest==3.1.1
-PyPDF2==1.26
+pytest-cov==2.5.1
+PyPDF2==1.26  # used to compare pdfs
