Add unicode literals and fix order issue in comparisons

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.6"
 
 script:
- - py.test --cov=reportexport tests/
+ - py.test --cov=reportexport tests/ -vv
 
 install:
   - make devinstall
